# hoppr

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml
src/: cli.rs  csv.rs  main.rs  modrinth.rs  utils.rs
