[package]
name = "hoppr"
version = "0.3.0"
edition = "2024"
authors = ["vitiacat"]
description = "A lightweight, table-based CLI tool to manage and download Minecraft mods or plugins from Modrinth"
repository = "https://github.com/vitiacat/hoppr"
license = "MIT"

[dependencies]
csv = "1.3"
ureq = { version = "3.0", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.11"
indicatif = "0.18"
clap = { version = "4.6", features = ["derive"] }
anyhow = "1.0"
itertools = "0.14"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true